
[Test_matchAnalysisWithPackageVulns - 1]
[
  {
    "package": {
      "name": "github.com/gogo/protobuf",
      "version": "1.3.1",
      "ecosystem": "Go"
    },
    "vulnerabilities": [
      {
        "modified": "2022-03-28T20:28:00Z",
        "published": "2022-03-28T20:28:00Z",
        "schema_version": "1.3.0",
        "id": "GHSA-c3h9-896r-86jm",
        "aliases": [
          "CVE-2021-3121"
        ],
        "summary": "Improper Input Validation in GoGo Protobuf",
        "details": "An issue was discovered in GoGo Protobuf before 1.3.2. plugin/unmarshal/unmarshal.go lacks certain index validation, aka the \"skippy peanut butter\" issue.",
        "affected": [
          {
            "package": {
              "ecosystem": "Go",
              "name": "github.com/gogo/protobuf",
              "purl": "pkg:golang/github.com/gogo/protobuf"
            },
            "ranges": [
              {
                "type": "SEMVER",
                "events": [
                  {
                    "introduced": "0"
                  },
                  {
                    "fixed": "1.3.2"
                  }
                ]
              }
            ],
            "database_specific": {
              "source": "https://github.com/github/advisory-database/blob/main/advisories/github-reviewed/2022/03/GHSA-c3h9-896r-86jm/GHSA-c3h9-896r-86jm.json"
            }
          }
        ],
        "references": [
          {
            "type": "ADVISORY",
            "url": "https://nvd.nist.gov/vuln/detail/CVE-2021-3121"
          },
          {
            "type": "WEB",
            "url": "https://github.com/gogo/protobuf/commit/b03c65ea87cdc3521ede29f62fe3ce239267c1bc"
          },
          {
            "type": "WEB",
            "url": "https://discuss.hashicorp.com/t/hcsec-2021-23-consul-exposed-to-denial-of-service-in-gogo-protobuf-dependency/29025"
          },
          {
            "type": "PACKAGE",
            "url": "https://github.com/gogo/protobuf"
          },
          {
            "type": "WEB",
            "url": "https://github.com/gogo/protobuf/compare/v1.3.1...v1.3.2"
          },
          {
            "type": "WEB",
            "url": "https://lists.apache.org/thread.html/r68032132c0399c29d6cdc7bd44918535da54060a10a12b1591328bff@%3Cnotifications.skywalking.apache.org%3E"
          },
          {
            "type": "WEB",
            "url": "https://lists.apache.org/thread.html/r88d69555cb74a129a7bf84838073b61259b4a3830190e05a3b87994e@%3Ccommits.pulsar.apache.org%3E"
          },
          {
            "type": "WEB",
            "url": "https://lists.apache.org/thread.html/rc1e9ff22c5641d73701ba56362fb867d40ed287cca000b131dcf4a44@%3Ccommits.pulsar.apache.org%3E"
          },
          {
            "type": "WEB",
            "url": "https://pkg.go.dev/vuln/GO-2021-0053"
          },
          {
            "type": "WEB",
            "url": "https://security.netapp.com/advisory/ntap-20210219-0006/"
          }
        ],
        "database_specific": {
          "cwe_ids": [
            "CWE-129",
            "CWE-20"
          ],
          "github_reviewed": true,
          "github_reviewed_at": "2022-03-28T20:28:00Z",
          "nvd_published_at": "2021-01-11T06:15:00Z",
          "severity": "HIGH"
        }
      },
      {
        "modified": "2023-02-10T16:51:38Z",
        "published": "2021-04-14T20:04:52Z",
        "schema_version": "1.3.0",
        "id": "GO-2021-0053",
        "aliases": [
          "CVE-2021-3121",
          "GHSA-c3h9-896r-86jm"
        ],
        "details": "Due to improper bounds checking, maliciously crafted input to generated Unmarshal methods can cause an out-of-bounds panic. If parsing messages from untrusted parties, this may be used as a denial of service vector.",
        "affected": [
          {
            "package": {
              "ecosystem": "Go",
              "name": "github.com/gogo/protobuf",
              "purl": "pkg:golang/github.com/gogo/protobuf"
            },
            "ranges": [
              {
                "type": "SEMVER",
                "events": [
                  {
                    "introduced": "0"
                  },
                  {
                    "fixed": "1.3.2"
                  }
                ]
              }
            ],
            "database_specific": {
              "source": "https://vuln.go.dev/ID/GO-2021-0053.json",
              "url": "https://pkg.go.dev/vuln/GO-2021-0053"
            },
            "ecosystem_specific": {
              "imports": [
                {
                  "path": "github.com/gogo/protobuf/plugin/unmarshal",
                  "symbols": [
                    "unmarshal.Generate",
                    "unmarshal.field"
                  ]
                }
              ]
            }
          }
        ],
        "references": [
          {
            "type": "FIX",
            "url": "https://github.com/gogo/protobuf/commit/b03c65ea87cdc3521ede29f62fe3ce239267c1bc"
          }
        ]
      }
    ],
    "groups": [
      {
        "ids": [
          "GHSA-c3h9-896r-86jm",
          "GO-2021-0053"
        ],
        "aliases": null,
        "experimentalAnalysis": {
          "GO-2021-0053": {
            "called": false,
            "unimportant": false
          }
        },
        "max_severity": ""
      }
    ]
  },
  {
    "package": {
      "name": "github.com/ipfs/go-bitfield",
      "version": "1.0.0",
      "ecosystem": "Go"
    },
    "vulnerabilities": [
      {
        "modified": "2023-02-10T19:52:45Z",
        "published": "2023-02-10T19:52:45Z",
        "schema_version": "1.3.0",
        "id": "GHSA-2h6c-j3gf-xp9r",
        "aliases": [
          "CVE-2023-23626"
        ],
        "summary": "IPFS go-bitfield vulnerable to DoS via malformed size arguments",
        "details": "### Impact\nWhen feeding untrusted user input into the size parameter of `NewBitfield` and `FromBytes` functions, an attacker can trigger `panic`s.\n\nThis happen when the `size` is a not a multiple of `8` or is negative.\nThere were already a note in the `NewBitfield` documentation:\n\u003e ```\n\u003e Panics if size is not a multiple of 8.\n\u003e ````\n\nBut it incomplete and missing from `FromBytes`'s documentation.\n\nThis has been replaced by returning an `(Bitfield, error)` and returning a non nil error if the size is wrong.\n\n### Patches\n- https://github.com/ipfs/go-bitfield/commit/5e1d256fe043fc4163343ccca83862c69c52e579\n\n### Workarounds\n- Ensure `size%8 == 0 \u0026\u0026 size \u003e= 0` yourself before calling `NewBitfield` or `FromBytes`\n\n### References\n- https://github.com/ipfs/go-unixfs/security/advisories/GHSA-q264-w97q-q778\n",
        "affected": [
          {
            "package": {
              "ecosystem": "Go",
              "name": "github.com/ipfs/go-bitfield",
              "purl": "pkg:golang/github.com/ipfs/go-bitfield"
            },
            "ranges": [
              {
                "type": "SEMVER",
                "events": [
                  {
                    "introduced": "1.0.0"
                  },
                  {
                    "fixed": "1.1.0"
                  }
                ]
              }
            ],
            "versions": [
              "1.0.0"
            ],
            "database_specific": {
              "source": "https://github.com/github/advisory-database/blob/main/advisories/github-reviewed/2023/02/GHSA-2h6c-j3gf-xp9r/GHSA-2h6c-j3gf-xp9r.json"
            }
          }
        ],
        "references": [
          {
            "type": "WEB",
            "url": "https://github.com/ipfs/go-bitfield/security/advisories/GHSA-2h6c-j3gf-xp9r"
          },
          {
            "type": "ADVISORY",
            "url": "https://nvd.nist.gov/vuln/detail/CVE-2023-23626"
          },
          {
            "type": "WEB",
            "url": "https://github.com/ipfs/go-bitfield/commit/5e1d256fe043fc4163343ccca83862c69c52e579"
          },
          {
            "type": "PACKAGE",
            "url": "https://github.com/ipfs/go-bitfield"
          },
          {
            "type": "WEB",
            "url": "https://pkg.go.dev/vuln/GO-2023-1558"
          }
        ],
        "database_specific": {
          "cwe_ids": [
            "CWE-1284",
            "CWE-754"
          ],
          "github_reviewed": true,
          "github_reviewed_at": "2023-02-10T19:52:45Z",
          "nvd_published_at": "2023-02-09T21:15:00Z",
          "severity": "MODERATE"
        }
      },
      {
        "modified": "2023-02-14T19:41:21Z",
        "published": "2023-02-14T19:41:21Z",
        "schema_version": "1.3.0",
        "id": "GO-2023-1558",
        "aliases": [
          "CVE-2023-23626",
          "GHSA-2h6c-j3gf-xp9r"
        ],
        "details": "When feeding untrusted user input into the size parameter of `NewBitfield` and FromBytes functions, an attacker can trigger panics.\n\nThis happens when the size is a not a multiple of 8 or is negative.\n\nA workaround is to ensure size%8 == 0 \u0026\u0026 size \u003e= 0 yourself before calling NewBitfield or FromBytes.",
        "affected": [
          {
            "package": {
              "ecosystem": "Go",
              "name": "github.com/ipfs/go-bitfield",
              "purl": "pkg:golang/github.com/ipfs/go-bitfield"
            },
            "ranges": [
              {
                "type": "SEMVER",
                "events": [
                  {
                    "introduced": "0"
                  },
                  {
                    "fixed": "1.1.0"
                  }
                ]
              }
            ],
            "database_specific": {
              "source": "https://vuln.go.dev/ID/GO-2023-1558.json",
              "url": "https://pkg.go.dev/vuln/GO-2023-1558"
            },
            "ecosystem_specific": {
              "imports": [
                {
                  "path": "github.com/ipfs/go-bitfield",
                  "symbols": [
                    "FromBytes",
                    "NewBitfield"
                  ]
                }
              ]
            }
          }
        ],
        "references": [
          {
            "type": "ADVISORY",
            "url": "https://github.com/ipfs/go-bitfield/security/advisories/GHSA-2h6c-j3gf-xp9r"
          },
          {
            "type": "FIX",
            "url": "https://github.com/ipfs/go-bitfield/commit/5e1d256fe043fc4163343ccca83862c69c52e579"
          }
        ]
      }
    ],
    "groups": [
      {
        "ids": [
          "GHSA-2h6c-j3gf-xp9r",
          "GO-2023-1558"
        ],
        "aliases": null,
        "experimentalAnalysis": {
          "GO-2023-1558": {
            "called": true,
            "unimportant": false
          }
        },
        "max_severity": ""
      }
    ]
  },
  {
    "package": {
      "name": "golang.org/x/image",
      "version": "0.4.0",
      "ecosystem": "Go"
    },
    "vulnerabilities": [
      {
        "modified": "2023-02-17T13:59:44Z",
        "published": "2023-02-17T13:59:44Z",
        "schema_version": "1.3.0",
        "id": "GHSA-qgc7-mgm3-q253",
        "aliases": [
          "CVE-2022-41727"
        ],
        "summary": "Uncontrolled Resource Consumption",
        "details": "An attacker can craft a malformed TIFF image which will consume a significant amount of memory when passed to DecodeConfig. This could lead to a denial of service.",
        "affected": [
          {
            "package": {
              "ecosystem": "Go",
              "name": "golang.org/x/image",
              "purl": "pkg:golang/golang.org/x/image"
            },
            "ranges": [
              {
                "type": "SEMVER",
                "events": [
                  {
                    "introduced": "0"
                  },
                  {
                    "fixed": "0.5.0"
                  }
                ]
              }
            ],
            "database_specific": {
              "source": "https://github.com/github/advisory-database/blob/main/advisories/github-reviewed/2023/02/GHSA-qgc7-mgm3-q253/GHSA-qgc7-mgm3-q253.json"
            }
          }
        ],
        "references": [
          {
            "type": "ADVISORY",
            "url": "https://nvd.nist.gov/vuln/detail/CVE-2022-41727"
          },
          {
            "type": "WEB",
            "url": "https://go.dev/cl/468195"
          },
          {
            "type": "WEB",
            "url": "https://go.dev/issue/58003"
          },
          {
            "type": "WEB",
            "url": "https://groups.google.com/g/golang-announce/c/ag-FiyjlD5o"
          },
          {
            "type": "WEB",
            "url": "https://pkg.go.dev/vuln/GO-2023-1572"
          }
        ],
        "database_specific": {
          "cwe_ids": [
            "CWE-400"
          ],
          "github_reviewed": true,
          "github_reviewed_at": "2023-02-17T13:59:44Z",
          "nvd_published_at": null,
          "severity": "LOW"
        }
      },
      {
        "modified": "2023-02-16T22:25:24Z",
        "published": "2023-02-16T22:25:24Z",
        "schema_version": "1.3.0",
        "id": "GO-2023-1572",
        "aliases": [
          "CVE-2022-41727"
        ],
        "details": "An attacker can craft a malformed TIFF image which will consume a significant amount of memory when passed to DecodeConfig. This could lead to a denial of service.",
        "affected": [
          {
            "package": {
              "ecosystem": "Go",
              "name": "golang.org/x/image",
              "purl": "pkg:golang/golang.org/x/image"
            },
            "ranges": [
              {
                "type": "SEMVER",
                "events": [
                  {
                    "introduced": "0"
                  },
                  {
                    "fixed": "0.5.0"
                  }
                ]
              }
            ],
            "database_specific": {
              "source": "https://vuln.go.dev/ID/GO-2023-1572.json",
              "url": "https://pkg.go.dev/vuln/GO-2023-1572"
            },
            "ecosystem_specific": {
              "imports": [
                {
                  "path": "golang.org/x/image/tiff",
                  "symbols": [
                    "Decode",
                    "DecodeConfig",
                    "decoder.ifdUint",
                    "newDecoder"
                  ]
                }
              ]
            }
          }
        ],
        "references": [
          {
            "type": "REPORT",
            "url": "https://go.dev/issue/58003"
          },
          {
            "type": "FIX",
            "url": "https://go.dev/cl/468195"
          },
          {
            "type": "WEB",
            "url": "https://groups.google.com/g/golang-announce/c/ag-FiyjlD5o"
          }
        ]
      }
    ],
    "groups": [
      {
        "ids": [
          "GHSA-qgc7-mgm3-q253",
          "GO-2023-1572"
        ],
        "aliases": null,
        "experimentalAnalysis": {
          "GO-2023-1572": {
            "called": false,
            "unimportant": false
          }
        },
        "max_severity": ""
      }
    ]
  }
]
---

[Test_matchEmptyAnalysisWithPackageVulns - 1]
[
  {
    "package": {
      "name": "github.com/gogo/protobuf",
      "version": "1.3.1",
      "ecosystem": "Go"
    },
    "vulnerabilities": [
      {
        "modified": "2022-03-28T20:28:00Z",
        "published": "2022-03-28T20:28:00Z",
        "schema_version": "1.3.0",
        "id": "GHSA-c3h9-896r-86jm",
        "aliases": [
          "CVE-2021-3121"
        ],
        "summary": "Improper Input Validation in GoGo Protobuf",
        "details": "An issue was discovered in GoGo Protobuf before 1.3.2. plugin/unmarshal/unmarshal.go lacks certain index validation, aka the \"skippy peanut butter\" issue.",
        "affected": [
          {
            "package": {
              "ecosystem": "Go",
              "name": "github.com/gogo/protobuf",
              "purl": "pkg:golang/github.com/gogo/protobuf"
            },
            "ranges": [
              {
                "type": "SEMVER",
                "events": [
                  {
                    "introduced": "0"
                  },
                  {
                    "fixed": "1.3.2"
                  }
                ]
              }
            ],
            "database_specific": {
              "source": "https://github.com/github/advisory-database/blob/main/advisories/github-reviewed/2022/03/GHSA-c3h9-896r-86jm/GHSA-c3h9-896r-86jm.json"
            }
          }
        ],
        "references": [
          {
            "type": "ADVISORY",
            "url": "https://nvd.nist.gov/vuln/detail/CVE-2021-3121"
          },
          {
            "type": "WEB",
            "url": "https://github.com/gogo/protobuf/commit/b03c65ea87cdc3521ede29f62fe3ce239267c1bc"
          },
          {
            "type": "WEB",
            "url": "https://discuss.hashicorp.com/t/hcsec-2021-23-consul-exposed-to-denial-of-service-in-gogo-protobuf-dependency/29025"
          },
          {
            "type": "PACKAGE",
            "url": "https://github.com/gogo/protobuf"
          },
          {
            "type": "WEB",
            "url": "https://github.com/gogo/protobuf/compare/v1.3.1...v1.3.2"
          },
          {
            "type": "WEB",
            "url": "https://lists.apache.org/thread.html/r68032132c0399c29d6cdc7bd44918535da54060a10a12b1591328bff@%3Cnotifications.skywalking.apache.org%3E"
          },
          {
            "type": "WEB",
            "url": "https://lists.apache.org/thread.html/r88d69555cb74a129a7bf84838073b61259b4a3830190e05a3b87994e@%3Ccommits.pulsar.apache.org%3E"
          },
          {
            "type": "WEB",
            "url": "https://lists.apache.org/thread.html/rc1e9ff22c5641d73701ba56362fb867d40ed287cca000b131dcf4a44@%3Ccommits.pulsar.apache.org%3E"
          },
          {
            "type": "WEB",
            "url": "https://pkg.go.dev/vuln/GO-2021-0053"
          },
          {
            "type": "WEB",
            "url": "https://security.netapp.com/advisory/ntap-20210219-0006/"
          }
        ],
        "database_specific": {
          "cwe_ids": [
            "CWE-129",
            "CWE-20"
          ],
          "github_reviewed": true,
          "github_reviewed_at": "2022-03-28T20:28:00Z",
          "nvd_published_at": "2021-01-11T06:15:00Z",
          "severity": "HIGH"
        }
      },
      {
        "modified": "2023-02-10T16:51:38Z",
        "published": "2021-04-14T20:04:52Z",
        "schema_version": "1.3.0",
        "id": "GO-2021-0053",
        "aliases": [
          "CVE-2021-3121",
          "GHSA-c3h9-896r-86jm"
        ],
        "details": "Due to improper bounds checking, maliciously crafted input to generated Unmarshal methods can cause an out-of-bounds panic. If parsing messages from untrusted parties, this may be used as a denial of service vector.",
        "affected": [
          {
            "package": {
              "ecosystem": "Go",
              "name": "github.com/gogo/protobuf",
              "purl": "pkg:golang/github.com/gogo/protobuf"
            },
            "ranges": [
              {
                "type": "SEMVER",
                "events": [
                  {
                    "introduced": "0"
                  },
                  {
                    "fixed": "1.3.2"
                  }
                ]
              }
            ],
            "database_specific": {
              "source": "https://vuln.go.dev/ID/GO-2021-0053.json",
              "url": "https://pkg.go.dev/vuln/GO-2021-0053"
            }
          }
        ],
        "references": [
          {
            "type": "FIX",
            "url": "https://github.com/gogo/protobuf/commit/b03c65ea87cdc3521ede29f62fe3ce239267c1bc"
          }
        ]
      }
    ],
    "groups": [
      {
        "ids": [
          "GHSA-c3h9-896r-86jm",
          "GO-2021-0053"
        ],
        "aliases": null,
        "max_severity": ""
      }
    ]
  },
  {
    "package": {
      "name": "github.com/ipfs/go-bitfield",
      "version": "1.0.0",
      "ecosystem": "Go"
    },
    "vulnerabilities": [
      {
        "modified": "2023-02-10T19:52:45Z",
        "published": "2023-02-10T19:52:45Z",
        "schema_version": "1.3.0",
        "id": "GHSA-2h6c-j3gf-xp9r",
        "aliases": [
          "CVE-2023-23626"
        ],
        "summary": "IPFS go-bitfield vulnerable to DoS via malformed size arguments",
        "details": "### Impact\nWhen feeding untrusted user input into the size parameter of `NewBitfield` and `FromBytes` functions, an attacker can trigger `panic`s.\n\nThis happen when the `size` is a not a multiple of `8` or is negative.\nThere were already a note in the `NewBitfield` documentation:\n\u003e ```\n\u003e Panics if size is not a multiple of 8.\n\u003e ````\n\nBut it incomplete and missing from `FromBytes`'s documentation.\n\nThis has been replaced by returning an `(Bitfield, error)` and returning a non nil error if the size is wrong.\n\n### Patches\n- https://github.com/ipfs/go-bitfield/commit/5e1d256fe043fc4163343ccca83862c69c52e579\n\n### Workarounds\n- Ensure `size%8 == 0 \u0026\u0026 size \u003e= 0` yourself before calling `NewBitfield` or `FromBytes`\n\n### References\n- https://github.com/ipfs/go-unixfs/security/advisories/GHSA-q264-w97q-q778\n",
        "affected": [
          {
            "package": {
              "ecosystem": "Go",
              "name": "github.com/ipfs/go-bitfield",
              "purl": "pkg:golang/github.com/ipfs/go-bitfield"
            },
            "ranges": [
              {
                "type": "SEMVER",
                "events": [
                  {
                    "introduced": "1.0.0"
                  },
                  {
                    "fixed": "1.1.0"
                  }
                ]
              }
            ],
            "versions": [
              "1.0.0"
            ],
            "database_specific": {
              "source": "https://github.com/github/advisory-database/blob/main/advisories/github-reviewed/2023/02/GHSA-2h6c-j3gf-xp9r/GHSA-2h6c-j3gf-xp9r.json"
            }
          }
        ],
        "references": [
          {
            "type": "WEB",
            "url": "https://github.com/ipfs/go-bitfield/security/advisories/GHSA-2h6c-j3gf-xp9r"
          },
          {
            "type": "ADVISORY",
            "url": "https://nvd.nist.gov/vuln/detail/CVE-2023-23626"
          },
          {
            "type": "WEB",
            "url": "https://github.com/ipfs/go-bitfield/commit/5e1d256fe043fc4163343ccca83862c69c52e579"
          },
          {
            "type": "PACKAGE",
            "url": "https://github.com/ipfs/go-bitfield"
          },
          {
            "type": "WEB",
            "url": "https://pkg.go.dev/vuln/GO-2023-1558"
          }
        ],
        "database_specific": {
          "cwe_ids": [
            "CWE-1284",
            "CWE-754"
          ],
          "github_reviewed": true,
          "github_reviewed_at": "2023-02-10T19:52:45Z",
          "nvd_published_at": "2023-02-09T21:15:00Z",
          "severity": "MODERATE"
        }
      },
      {
        "modified": "2023-02-14T19:41:21Z",
        "published": "2023-02-14T19:41:21Z",
        "schema_version": "1.3.0",
        "id": "GO-2023-1558",
        "aliases": [
          "CVE-2023-23626",
          "GHSA-2h6c-j3gf-xp9r"
        ],
        "details": "When feeding untrusted user input into the size parameter of `NewBitfield` and FromBytes functions, an attacker can trigger panics.\n\nThis happens when the size is a not a multiple of 8 or is negative.\n\nA workaround is to ensure size%8 == 0 \u0026\u0026 size \u003e= 0 yourself before calling NewBitfield or FromBytes.",
        "affected": [
          {
            "package": {
              "ecosystem": "Go",
              "name": "github.com/ipfs/go-bitfield",
              "purl": "pkg:golang/github.com/ipfs/go-bitfield"
            },
            "ranges": [
              {
                "type": "SEMVER",
                "events": [
                  {
                    "introduced": "0"
                  },
                  {
                    "fixed": "1.1.0"
                  }
                ]
              }
            ],
            "database_specific": {
              "source": "https://vuln.go.dev/ID/GO-2023-1558.json",
              "url": "https://pkg.go.dev/vuln/GO-2023-1558"
            }
          }
        ],
        "references": [
          {
            "type": "ADVISORY",
            "url": "https://github.com/ipfs/go-bitfield/security/advisories/GHSA-2h6c-j3gf-xp9r"
          },
          {
            "type": "FIX",
            "url": "https://github.com/ipfs/go-bitfield/commit/5e1d256fe043fc4163343ccca83862c69c52e579"
          }
        ]
      }
    ],
    "groups": [
      {
        "ids": [
          "GHSA-2h6c-j3gf-xp9r",
          "GO-2023-1558"
        ],
        "aliases": null,
        "max_severity": ""
      }
    ]
  },
  {
    "package": {
      "name": "golang.org/x/image",
      "version": "0.4.0",
      "ecosystem": "Go"
    },
    "vulnerabilities": [
      {
        "modified": "2023-02-17T13:59:44Z",
        "published": "2023-02-17T13:59:44Z",
        "schema_version": "1.3.0",
        "id": "GHSA-qgc7-mgm3-q253",
        "aliases": [
          "CVE-2022-41727"
        ],
        "summary": "Uncontrolled Resource Consumption",
        "details": "An attacker can craft a malformed TIFF image which will consume a significant amount of memory when passed to DecodeConfig. This could lead to a denial of service.",
        "affected": [
          {
            "package": {
              "ecosystem": "Go",
              "name": "golang.org/x/image",
              "purl": "pkg:golang/golang.org/x/image"
            },
            "ranges": [
              {
                "type": "SEMVER",
                "events": [
                  {
                    "introduced": "0"
                  },
                  {
                    "fixed": "0.5.0"
                  }
                ]
              }
            ],
            "database_specific": {
              "source": "https://github.com/github/advisory-database/blob/main/advisories/github-reviewed/2023/02/GHSA-qgc7-mgm3-q253/GHSA-qgc7-mgm3-q253.json"
            }
          }
        ],
        "references": [
          {
            "type": "ADVISORY",
            "url": "https://nvd.nist.gov/vuln/detail/CVE-2022-41727"
          },
          {
            "type": "WEB",
            "url": "https://go.dev/cl/468195"
          },
          {
            "type": "WEB",
            "url": "https://go.dev/issue/58003"
          },
          {
            "type": "WEB",
            "url": "https://groups.google.com/g/golang-announce/c/ag-FiyjlD5o"
          },
          {
            "type": "WEB",
            "url": "https://pkg.go.dev/vuln/GO-2023-1572"
          }
        ],
        "database_specific": {
          "cwe_ids": [
            "CWE-400"
          ],
          "github_reviewed": true,
          "github_reviewed_at": "2023-02-17T13:59:44Z",
          "nvd_published_at": null,
          "severity": "LOW"
        }
      },
      {
        "modified": "2023-02-16T22:25:24Z",
        "published": "2023-02-16T22:25:24Z",
        "schema_version": "1.3.0",
        "id": "GO-2023-1572",
        "aliases": [
          "CVE-2022-41727"
        ],
        "details": "An attacker can craft a malformed TIFF image which will consume a significant amount of memory when passed to DecodeConfig. This could lead to a denial of service.",
        "affected": [
          {
            "package": {
              "ecosystem": "Go",
              "name": "golang.org/x/image",
              "purl": "pkg:golang/golang.org/x/image"
            },
            "ranges": [
              {
                "type": "SEMVER",
                "events": [
                  {
                    "introduced": "0"
                  },
                  {
                    "fixed": "0.5.0"
                  }
                ]
              }
            ],
            "database_specific": {
              "source": "https://vuln.go.dev/ID/GO-2023-1572.json",
              "url": "https://pkg.go.dev/vuln/GO-2023-1572"
            }
          }
        ],
        "references": [
          {
            "type": "REPORT",
            "url": "https://go.dev/issue/58003"
          },
          {
            "type": "FIX",
            "url": "https://go.dev/cl/468195"
          },
          {
            "type": "WEB",
            "url": "https://groups.google.com/g/golang-announce/c/ag-FiyjlD5o"
          }
        ]
      }
    ],
    "groups": [
      {
        "ids": [
          "GHSA-qgc7-mgm3-q253",
          "GO-2023-1572"
        ],
        "aliases": null,
        "max_severity": ""
      }
    ]
  }
]
---
